--- a/package.json
+++ b/package.json
@@ -24,12 +24,21 @@
   },
   "homepage": "https://github.com/juanloaiza21/own-crud#readme",
   "dependencies": {
+    "axios": "^1.2.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "handlebars": "^4.7.7",
     "mongoose": "^6.8.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sqlite": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
